--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="C:\Users\hp\Downloads\logo.png" alt="">
+            <img src="logo.png" alt="">
         </div>
         <nav class="nav">
             <a href="#">HOME</a><a href="#">ABOUT US</a><a href="#">CONTACT</a><a href="#">SIGN IN</a><a href="#">BLOG</a>
@@ -39,7 +39,7 @@
         <h1 class="head"><span>ABOUT</span>US</h1>
         <div class="aboutsec">
             <div >
-                <img class="aboutimg" src="C:\Users\hp\Downloads\home-img.jpeg" alt="">
+                <img class="home-img.jpeg" alt="">
             </div>
             <div class="aboutcontent">
                 <h3> what makes our coffee special</h3>
@@ -53,31 +53,31 @@
         <h1 class="head"><span>MENU</span> &nbspOPTIONS</h1>
       <div class="grid">
         <div class="menu1">
-             <img src="C:\Users\hp\Downloads\menu-1 (1).png" alt="">
+             <img src="menu-1.png" alt="">
              <p>healthy and tasty</p>
              <p class="price"> price $15</p>
              <a href="" class="btn">add to cart</a>
         </div>
         <div class="menu1">
-            <img src="C:\Users\hp\Downloads\menu-2.png" alt="">
+            <img src="menu-2.png" alt="">
             <p>healthy and tasty</p>
             <p class="price"> price $15</p>
             <a href="" class="btn">add to cart</a>
         </div>
         <div class="menu1">
-             <img src="C:\Users\hp\Downloads\menu-3.png" alt="">
+             <img src="menu-3.png" alt="">
              <p>healthy and tasty</p>
              <p class="price"> price $15</p>
              <a href="" class="btn">add to cart</a>
         </div>
         <div class="menu1">
-             <img src="C:\Users\hp\Downloads\menu-4.png" alt="">
+             <img src="menu-4.png" alt="">
              <p>healthy and tasty</p>
              <p class="price"> price $15</p>
              <a href="" class="btn">add to cart</a>
         </div>
         <div class="menu1">
-             <img src="C:\Users\hp\Downloads\menu-6.png" alt="">
+             <img src="menu-6.png" alt="">
              <p>Healthy and Tasty</p>
              <p class="price"> price $15</p>
              <a href="#" class="btn">add to cart</a>
