--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1 class="head"><span>ABOUT</span>US</h1>
         <div class="aboutsec">
             <div >
-                <img class="home-img.jpeg" alt="">
+                <img class="aboutimg" src="home-img.jpeg" alt="">
             </div>
             <div class="aboutcontent">
                 <h3> what makes our coffee special</h3>
