--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
             <i class="fa-brands fa-linkedin"></i>
             <i class="fa-brands fa-github"></i>
         </div>
+            <nav class="navfoot">
+                <a href="#">HOME</a>
+                <a href="#">ABOUT US</a>
+                <a href="#">CONTACT</a>
+                <a href="#">SIGN IN</a>
+                <a href="#">BLOG</a>
+            </nav>
     </footer>
 </body>
 </html>
