--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="./image/logo.png" alt="">
+            <img src="logo.png" alt="">
         </div>
         <nav class="nav">
             <a href="#">HOME</a><a href="#">ABOUT US</a><a href="#">CONTACT</a><a href="#">SIGN IN</a><a href="#">BLOG</a>
